weekly menu done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
 </string>
 
     <string-array name="currentMenu">
-        <item>Rice\nChickpeas & Potatoes in Tomato Masala\nSalad + Almond Dressing\nApple Cinnamon Halava (Dessert)\nTea </item>
+        <item>Rice\nChickpeas and Potatoes in Tomato Masala\nSalad + Almond Dressing\nApple Cinnamon Halava (Dessert)\nTea </item>
 
 
 
