account page done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,26 @@
     <item>Rice\nChickpeas and Potatoes in Tomato Masala\nSalad + Almond Dressing\nApple Cinnamon Halava (Dessert)\nTea</item>
     </string-array>
 
+    <string name="accountName">
+        John Doe
+    </string>
 
+    <string name="accountEmail">
+        johndoe@gmail.com
+    </string>
+
+    <string name="cardInfo">
+        xxxx-xxxx-xxxx-1234
+    </string>
+
+
+    <string name="passInfo">
+        ************
+    </string>
+
+    <string name="usernameInfo">
+        coolcucumber123
+    </string>
 
 </resources>
 
